vlib/v/checker/tests/for_in_mut_string.vv
module main

[heap]
pub struct Grid {
pub mut:
	header string
}

fn test_for_in_mut_string() {
	h := 'yo'

	mut grid := Grid{
		header: h
	}
	wrap_text(mut grid)
}

fn wrap_text(mut gv Grid) {
	for mut ch in gv.header {
		println(ch)
	}
}
